add and list skus. clean up. change to mvn.