@@ -1,20 +1,22 @@
 package com.fietsenwachtapp.demo;
 
-import com.fietsenwachtapp.demo.entities.PartEntity;
+import com.fietsenwachtapp.demo.entities.SKUEntity;
 import com.fietsenwachtapp.demo.entities.UserEntity;
-import com.fietsenwachtapp.demo.entities.WorkItemEntity;
-import com.fietsenwachtapp.demo.repositories.PartRepository;
+import com.fietsenwachtapp.demo.entities.JobItemEntity;
+import com.fietsenwachtapp.demo.repositories.SKURepository;
 import com.fietsenwachtapp.demo.repositories.UserRepository;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 import java.util.UUID;
 
 @Service
 public class WorkItemFactory {
-    public static WorkItemEntity createMockWorkItem(UserRepository userRepository, PartRepository partRepositry) {
+    public static JobItemEntity createMockWorkItem(UserRepository userRepository, SKURepository partRepositry) {
         // Mock address
-        WorkItemEntity.Address address = new WorkItemEntity.Address();
+        JobItemEntity.Address address = new JobItemEntity.Address();
         address.city = "MockCity";
         address.street = "123 Mock Street";
         address.zipCode = "12345";
@@ -22,15 +24,13 @@ public class WorkItemFactory {
         userRepository.deleteAll();
         partRepositry.deleteAll();
         // Mock mechanics
-        UserEntity mech1 = userRepository.save(new UserEntity("John Doe"));
-        UserEntity mech2 = userRepository.save(new UserEntity( "Jane Smith"));
+        UserEntity mech1 = userRepository.insert(new UserEntity(UUID.randomUUID(),"John Doe"));
+        UserEntity mech2 = userRepository.insert(new UserEntity( UUID.randomUUID(),"Jane Smith"));
 
         // Mock parts
-        PartEntity part1 = partRepositry.save(new PartEntity("Brake Pad"));
-        PartEntity part2 =   partRepositry.save( new PartEntity("Oil Filter"));
 
         // Create and return mock WorkItemEntity
-        return new WorkItemEntity(
+        return new JobItemEntity(
                 UUID.randomUUID().toString(),
                 address,
                 3600.0f, // 1 hour
@@ -38,7 +38,7 @@ public class WorkItemFactory {
                 Arrays.asList(mech1, mech2),
                 "Alice Johnson",
                 "Brake replacement and oil change",
-                Arrays.asList(part1, part2),
+                List.of(new SKUEntity("asd",1),new SKUEntity("asd",1)),
                 JobStatus.INPROGRESS
         );
     }
